--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html><html lang="en"><head>
-  <script src="libraries/p5.js"></script>
-  <script src="libraries/p5.dom.min.js"></script>
-  <script src="libraries/p5.sound.min.js"></script>
-  <script src="libraries/matter.js"></script>
-  <script src="libraries/p5.play.js"></script>
-
-<script src = "js/game.js"></script>
-  <script src="js/form.js"></script>
-  <script src = "js/player.js"></script>
-  
-
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-   https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<script>
-// Your web app's Firebase configuration
-var firebaseConfig = {
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.dom.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/matter.js"></script>
+    <script src="libraries/p5.play.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
     apiKey: "AIzaSyBSqmvLs18TgVygncII_JEfRdinPstNH50",
     authDomain: "pro-c40-10374.firebaseapp.com",
     projectId: "pro-c40-10374",
@@ -27,15 +21,20 @@ var firebaseConfig = {
     appId: "1:340739636009:web:da144610252b8eb66b5538",
     measurementId: "G-B9J1GHHLKS"
   };
-// Initialize Firebase
-firebase.initializeApp(firebaseConfig);
-</script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
-</head>
-<body>
-  <script src="sketch.js"></script>
+    <!--Add Your JS files here -->
+    <script src="js/player.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/game.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  
 
 </body></html>
